# Devin

./: .gitignore  Dockerfile  docker-compose.yml
RtspToRtsp/: Dockerfile  README.md  docker-compose.yml
RtspToRtsp/config/: config.json
RtspToRtsp/src/: config.go  go.mod  go.sum  gstreamer.go  http.go  main.go  rtsp_api.go  rtsp_server.go  status.go  stream.go
RtspToWebRtc/: Dockerfile  docker-compose.yml  start.sh
RtspToWebRtc/config/: config.json
RtspToWebRtc/src/: README.md  config.go  http.go  main.go  stream.go
ai_example/: CNITS-DE-007.1-인터페이스 설계서_VDS(표준) Ver 1.0.md  README.md  activate_env.sh  compression_retriever_config.py  create_notebook.py  document_loader.py  document_saver.py  document_splitter.py  embedding_config.py  environment.yml  llm_config.py  logger.py  main.py  rag_processor.py  rag_state.py  requirements.txt  vector_store_config.py  workflow_config.py
ai_example/notebooks/: first_notebook.ipynb  test.ipynb
app/: main.py
app/static/css/: styles.css
app/templates/: index.html
pdf-to-markdown/: README.md  USER_MANUAL.md  pyproject.toml
pdf-to-markdown-python/: USER_MANUAL.md
pdf-to-markdown/app/static/js/: script.js
pdf-to-markdown/app/templates/: index.html
rtsp_server/: Dockerfile  README.md  api_client.py  config.json  config.py  docker-compose.yml  main.py  requirements.txt  rtsp_server.py  start.sh  stop.sh
rtsp_server/config/: config.json
rtsp_server/src/: api_client.py  config_manager.py  server.py
traffic_report_system/: .env.example  README.md  __init__.py  config.py  main.py  requirements.txt
(+20 files in other folders)
