[tool.poetry]
name = "pdf-to-markdown"
version = "0.1.0"
description = "A web application to convert PDF files to Markdown format"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
fastapi = {extras = ["all"], version = "^0.115.12"}
langchain-docling = "^0.0.1"
langchain-core = "^0.2.10"
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
